--- a/src/main/resources/assets/createcraftedbeginning/lang/zh_cn.json
+++ b/src/main/resources/assets/createcraftedbeginning/lang/zh_cn.json
@@ -1,7 +1,9 @@
 {
-  "item.createcraftedbeginning.cinder_dough": "余烬面团",
-  "item.createcraftedbeginning.polished_amethyst_shard": "磨制紫水晶碎片",
+  "item.createcraftedbeginning.cinder_alloy": "余烬合金",
+  "item.createcraftedbeginning.amethyst_crystal_sheet": "紫晶体板",
 
+  "block.createcraftedbeginning.cinder_casing": "余烬机壳",
+  "block.createcraftedbeginning.cinder_nozzle": "余烬分散网",
   "block.createcraftedbeginning.cardboard_crate": "纸板板条箱",
   "block.createcraftedbeginning.andesite_crate": "安山板条箱",
   "block.createcraftedbeginning.brass_crate": "黄铜板条箱",
@@ -9,6 +11,15 @@
   "block.createcraftedbeginning.pneumatic_engine": "气动引擎",
   "block.createcraftedbeginning.photo-stress_bearing": "光应力轴承",
 
+  "createcraftedbeginning.cinder_nozzle.working_range": "工作范围",
+  "createcraftedbeginning.cinder_nozzle.working_1x1x1": "1x1x1 立方体",
+  "createcraftedbeginning.cinder_nozzle.working_3x3x3": "3x3x3 立方体",
+  "createcraftedbeginning.cinder_nozzle.working_5x5x5": "5x5x5 立方体",
+  "createcraftedbeginning.cinder_nozzle.working_7x7x7": "7x7x7 立方体",
+
+  "logistics.cinder_nozzle.working_range": "工作范围",
+  "logistics.cinder_nozzle.working_range_cube_edge_length": "正方体边长",
+  "logistics.cinder_nozzle.working_range_unit": "格",
   "logistics.brass_crate.filter": "过滤器",
   "logistics.sturdy_crate.filter": "过滤器",
 
@@ -54,12 +65,22 @@
   "createcraftedbeginning.ponder.photo-stress_bearing.text_3": "即便天空光照等级为0，转速仍将保持最低2 RPM",
   "createcraftedbeginning.ponder.photo-stress_bearing.text_4": "在雨天及雷暴天气下，转速会减半",
   "createcraftedbeginning.ponder.photo-stress_bearing.text_5": "使用面板可以调整其旋转方向",
-
   "createcraftedbeginning.ponder.photo-stress_bearing_other_dimension.header": "其他维度中的光应力轴承",
   "createcraftedbeginning.ponder.photo-stress_bearing_other_dimension.text_1": "在其他维度中，光应力轴承将停止工作",
+
+  "createcraftedbeginning.ponder.cinder_nozzle.header": "用余烬分散网点燃生物",
+  "createcraftedbeginning.ponder.cinder_nozzle.text_1": "余烬分散网在接入旋转力后可以伤害并点燃周围的生物",
+  "createcraftedbeginning.ponder.cinder_nozzle.text_2": "使用面板可以调整其工作范围",
+  "createcraftedbeginning.ponder.cinder_nozzle.text_3": "转速越快，造成伤害和点燃的时间间隔越短",
+  "createcraftedbeginning.ponder.cinder_nozzle.text_4": "在256 RPM转速下，每半秒对范围内的生物造成2点伤害，并引燃2秒",
+  "createcraftedbeginning.ponder.cinder_nozzle.text_5": "然而，当转速低于32 RPM时，余烬分散网将停止工作",
+  "createcraftedbeginning.ponder.cinder_nozzle_working_range.header": "显示余烬分散网的工作范围",
+  "createcraftedbeginning.ponder.cinder_nozzle_working_range.text_1": "戴上工程师护目镜后，使用扳手右击可以显示或隐藏工作范围",
 
   "createcraftedbeginning.ponder.tag.crates": "板条箱",
   "createcraftedbeginning.ponder.tag.crates.description": "板条箱只能储存同类物品，但无视堆叠上限",
   "createcraftedbeginning.ponder.tag.kinetic_sources": "动力源",
-  "createcraftedbeginning.ponder.tag.kinetic_sources.description": "能够产生旋转力的组件"
+  "createcraftedbeginning.ponder.tag.kinetic_sources.description": "能够产生旋转力的组件",
+  "createcraftedbeginning.ponder.tag.kinetic_appliances": "动力设备",
+  "createcraftedbeginning.ponder.tag.kinetic_appliances.description": "这些组件可以利用旋转力进行工作"
 }
