--- a/src/main/resources/assets/createcraftedbeginning/lang/en_us.json
+++ b/src/main/resources/assets/createcraftedbeginning/lang/en_us.json
@@ -405,7 +405,7 @@
   "item.createcraftedbeginning.chorus_flower_powder": "Chorus Flower Powder",
   "item.createcraftedbeginning.cinder_alloy": "Cinder Alloy",
   "item.createcraftedbeginning.creative_gas_canister": "Creative Gas Canister",
-  "item.createcraftedbeginning.creative_gas_canister.tooltip.summary": "A portable _gas container_ with _infinite_ capacity that provides a continuous supply of gas to gas-consuming equipment",
+  "item.createcraftedbeginning.creative_gas_canister.tooltip.summary": "A portable _gas container_ with _infinite_ capacity that provides a continuous supply of gas to gas-consuming equipment. _Right-click_ a Creative Gas Canister while holding a Gas Canister to change contained gas type.",
   "item.createcraftedbeginning.creative_gas_canister_placeable": "Creative Gas Canister Placeable",
   "item.createcraftedbeginning.creative_ice_cream": "Creative Ice Cream",
   "item.createcraftedbeginning.end_alloy": "End Alloy",
@@ -413,7 +413,7 @@
   "item.createcraftedbeginning.energized_natural_wind_charge": "Energized Natural Wind Charge",
   "item.createcraftedbeginning.energized_ultrawarm_wind_charge": "Energized Ultrawarm Wind Charge",
   "item.createcraftedbeginning.ethereal_wind_charge": "Ethereal Wind Charge",
-  "item.createcraftedbeginning.gas_canister.tooltip.summary": "A portable _gas container_ that provides a continuous supply of gas to gas-consuming equipment",
+  "item.createcraftedbeginning.gas_canister.tooltip.summary": "A portable _gas container_ that provides a continuous supply of gas to gas-consuming equipment.",
   "item.createcraftedbeginning.gas_canister": "Gas Canister",
   "item.createcraftedbeginning.gas_canister_pack.tooltip.summary": "A _gas container_ storing up to 4 Gas Canisters, providing a continuous supply to gas-consuming equipment with _highest_ usage priority.",
   "item.createcraftedbeginning.gas_canister_pack": "Gas Canister Pack",
